--- a/Project - CC7140/Assembly-CSharp.csproj
+++ b/Project - CC7140/Assembly-CSharp.csproj
@@ -61,20 +61,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\CharacterController2D.cs" />
-    <Compile Include="Assets\controllerMoviment.cs" />
+    <Compile Include="Assets\Scripts\ControllerEnimie.cs" />
     <None Include="Assets\Dragon Warrior Files\Read Me.txt" />
     <Reference Include="UnityEditor.StandardEvents">
-      <HintPath>C:/Users/mcarraschi/Desktop/GameProject/GameDevelopment/Project - CC7140/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
+      <HintPath>C:/Users/mcarraschi/Desktop/GameDevelopment/Project - CC7140/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/mcarraschi/Desktop/GameProject/GameDevelopment/Project - CC7140/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/mcarraschi/Desktop/GameDevelopment/Project - CC7140/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>C:/Users/mcarraschi/Desktop/GameProject/GameDevelopment/Project - CC7140/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>C:/Users/mcarraschi/Desktop/GameDevelopment/Project - CC7140/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/mcarraschi/Desktop/GameProject/GameDevelopment/Project - CC7140/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/mcarraschi/Desktop/GameDevelopment/Project - CC7140/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
