--- a/Project - CC7140/Assembly-CSharp.csproj
+++ b/Project - CC7140/Assembly-CSharp.csproj
@@ -64,9 +64,11 @@
     <Compile Include="Assets\Scripts\Enimie\EnemyController.cs" />
     <Compile Include="Assets\Scripts\ObjectsScene\CollisionObjects.cs" />
     <Compile Include="Assets\Scripts\ObjectsScene\PhysicPlataformObject.cs" />
+    <Compile Include="Assets\Scripts\ObjectsScene\SpawnPlatforms.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\PlayerHealth.cs" />
     <Compile Include="Assets\Scripts\ScorePlayer.cs" />
+    <Compile Include="Assets\Scripts\SpawnCoins.cs" />
     <None Include="Assets\Hearts\PNG\health_bar\info.txt" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Users/MarcusVinicius/Projetos/GameDevelopment/Project - CC7140/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
